# menu

./: Cargo.toml  Readme.md  menu-example.json
.github/: release.yml
.github/workflows/: release.yml
src/: main.rs
src/app/: app.rs  error.rs  mod.rs
src/app/builder/: menu.rs  mod.rs  window.rs
src/domain/menu/: gravity.rs  item.rs  menu.rs  mod.rs
src/services/: mod.rs
src/services/menu/parser/: mod.rs  parser.rs
src/services/menu/parser/example/: error.rs  example.rs  mod.rs
src/services/menu/parser/json/: error.rs  json.rs  mod.rs
src/services/sway/: errors.rs  mod.rs  service.rs
