[package]
name = "menu"
version = "0.1.0"
authors = ["Sergei Melnikov <rodnover55@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "0.14.0"
glib = "0.14.2"
cairo-rs = "0.14.1"
log = "0.4.14"
thiserror = "1.0.24"
stderrlog = "0.5.1"
serde_json = "1.0.64"
failure = "*"

[dependencies.gtk]
version = "0.14.0"
features = ["v3_24"]

[dependencies.swayipc]
version = "2.7.2"